--- a/index.html
+++ b/index.html
@@ -19,76 +19,87 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!--Шапка-->
+    <!--Шапка -->
     <header class="header">
-      <div class="container header-container">
-        <nav class="header-nav">
-          <a href="/" class="header-logo"
-            ><span class="logo-web">Web</span>Studio</a
+      <div class="conteiner box">
+        <div class="logo">
+          <a href="/" class="header-logo link"
+            ><span class="logo-text">Web</span>Studio</a
           >
-          <ul class="header-list list">
-            <li class="header-iten">
-              <a href="" class="header-link curnet">Студія</a>
+        </div>
+        <nav>
+          <ul class="header-list list box">
+            <li class="header-item">
+              <a href="" class="header-link link current">Студія</a>
             </li>
-            <li class="header-iten">
-              <a href="./portfolio.html" class="header-link">Портфоліо</a>
+            <li class="header-item">
+              <a
+                href="./portfolio.html"
+                target="_self"
+                rel="norefferer noopener nofollow"
+                class="header-link link"
+                >Портфоліо</a
+              >
             </li>
-            <li class="header-iten">
-              <a href="" class="header-link">Контакти</a>
+            <li class="header-item">
+              <a href="" class="header-link link">Контакти</a>
             </li>
           </ul>
         </nav>
-        <ul class="header-list list">
-          <div class="header-connect">
-            <li>
-              <a class="header-mail" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a class="header-tel" href="tel:+380961111111">+380961111111</a>
-            </li>
-          </div>
+
+        <!-- header contacts -->
+
+        <ul class="contacts-list list box">
+          <li class="contacts-item">
+            <a href="mailto:info@devstudio.com" class="header-contacts link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="contacts-item">
+            <a href="tel:+380961111111" class="header-contacts link"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
       </div>
     </header>
-    <!-- Уникальный контент страницы -->
+    <!-- main -->
     <main>
-      <!--Герой-->
+      <!-- Герой -->
       <section class="hero">
-        <div class="container hero-section section">
+        <div class="conteiner">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-          <button type="submit" class="hero-button">Замовити послугу</button>
+          <button type="button" class="hero-button">Замовити послугу</button>
         </div>
       </section>
-
-      <!--Преимущества-->
-      <section class="benefits section">
-        <div class="container">
+      <!-- Преимущетва -->
+      <section class="benefits section pb-none">
+        <div class="conteiner">
+          <h2 class="benefits-title visually-hidden">Особливості</h2>
           <ul class="benefits-list list">
-            <li>
-              <h3 class="benefits-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-              <p class="benefits-paragraf">
-                Ідейні міркування, і навіть початок повсякденної роботи з
-                формування позиції.
+            <li class="benefits-item">
+              <h3 class="benefits-subtitle">Увага до деталей</h3>
+              <p class="benefits-text">
+                Ідейні міркування, а також початок щоденної роботи по формуванню
+                позиції
               </p>
             </li>
-            <li>
-              <h3 class="benefits-title">ПУНКТУАЛЬНІСТЬ</h3>
-              <p class="benefits-paragraf">
+            <li class="benefits-item">
+              <h3 class="benefits-subtitle">Пунктуальність</h3>
+              <p class="benefits-text">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li>
-              <h3 class="benefits-title">ПЛАНУВАННЯ</h3>
-              <p class="benefits-paragraf">
+            <li class="benefits-item">
+              <h3 class="benefits-subtitle">Планування</h3>
+              <p class="benefits-text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li>
-              <h3 class="benefits-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-              <p class="benefits-paragraf">
+            <li class="benefits-item">
+              <h3 class="benefits-subtitle">Сучасні технології</h3>
+              <p class="benefits-text">
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
               </p>
@@ -96,108 +107,75 @@
           </ul>
         </div>
       </section>
-      <!--Примеры рабрт-->
-      <section class="examples section borders">
-        <div class="container">
-          <h2 class="examples-title">Чим ми займаємося</h2>
+      <!-- Примеры работ  -->
+      <section class="examples section">
+        <div class="conteiner">
+          <h2 class="examples-title title">Чим ми займаємося</h2>
           <ul class="examples-list list">
-            <li>
-              <img
-                src="./images/box1.jpg"
-                alt="html and css"
-                width="370"
-                height="294"
-              />
+            <li class="examples-item">
+              <img src="./images/box1.jpg" alt="Кодування" width="370" />
             </li>
-            <li>
-              <img
-                src="./images/box2.jpg"
-                alt="javascript"
-                width="370"
-                height="294"
-              />
+            <li class="examples-item">
+              <img src="./images/box2.jpg" alt="Оптимізація" width="370" />
             </li>
-            <li>
-              <img
-                src="./images/box3.jpg"
-                alt="design"
-                width="370"
-                height="294"
-              />
+            <li class="examples-item">
+              <img src="./images/box3.jpg" alt="дизайн" width="370" />
             </li>
           </ul>
         </div>
       </section>
-      <!--Наша команда-->
+      <!-- Наша команда  -->
       <section class="team section">
-        <div class="container">
-          <h2 class="team-title">Наша команда</h2>
+        <div class="conteiner">
+          <h2 class="team-title title">Наша команда</h2>
           <ul class="team-list list">
-            <li>
-              <img
-                src="./images/img1.jpg"
-                alt="парень image"
-                width="270"
-                height="260"
-              />
+            <li class="team-item">
+              <img src="./images/img1.jpg" alt="Ігор Дем'яненко" width="270" />
               <h3 class="team-name">Ігор Дем'яненко</h3>
-              <p class="team-item">Designer</p>
+              <p class="team-text">Product Designer</p>
             </li>
-            <li>
-              <img
-                src="./images/img2.jpg"
-                alt="девушка image"
-                width="270"
-                height="260"
-              />
-              <h3 class="team-name">Ольга Рєпіна</h3>
-              <p class="team-item">Frontend Developer</p>
+
+            <li class="team-item">
+              <img src="./images/img2.jpg" alt="Ольга Репіна" width="270" />
+              <h3 class="team-name">Ольга Репіна</h3>
+              <p class="team-text">Frontend Developer</p>
             </li>
-            <li>
-              <img
-                src="./images/img3.jpg"
-                alt="парень image"
-                width="270"
-                height="260"
-              />
+            <li class="team-item">
+              <img src="./images/img3.jpg" alt="Микола Тарасов" width="270" />
               <h3 class="team-name">Микола Тарасов</h3>
-              <p class="team-item">Marketing</p>
+              <p class="team-text">Marketing</p>
             </li>
-            <li>
-              <img
-                src="./images/img4.jpg"
-                alt="парень image"
-                width="270"
-                height="260"
-              />
+            <li class="team-item">
+              <img src="./images/img4.jpg" alt="Михайло Єрмаков" width="270" />
               <h3 class="team-name">Михайло Єрмаков</h3>
-              <p class="team-item">UI Designer</p>
+              <p class="team-text">UI Designer</p>
             </li>
           </ul>
         </div>
       </section>
     </main>
-    <!--Подвал-->
-    <footer class="header-futer">
-      <a href="/" class="header-logo-footer"
-        ><span class="logo-web">Web</span>Studio</a
-      >
-
-      <address>
-        <a href="" class="address-location">г.Киев Бульвар Леси Украинки,д26</a>
-        <ul class="footer-list list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="header-footermail"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="header-footertel"
-              >+380961111111</a
-            >
-          </li>
-        </ul>
-      </address>
+    <!-- footer -->
+    <footer class="basement">
+      <div class="basement-conteiner">
+        <a href="/" class="basement-logo link"
+          ><span class="logo-text">Web</span>Studio</a
+        >
+        <address class="basement-address">
+          <p class="basement-text">м. Київ, пр-т Лесі Українки, 26</p>
+          <ul class="basement-list list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="basement-contacts link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="basement-contacts link"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
