--- a/portfolio.html
+++ b/portfolio.html
@@ -19,189 +19,211 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <!-- header navigation -->
     <header class="header">
-      <div class="container header-container">
-        <nav class="header-nav">
-          <a href="/" class="header-logo"
-            ><span class="logo-web">Web</span>Studio</a
+      <div class="conteiner box">
+        <div class="logo">
+          <a href="./index.html" class="header-logo link"
+            ><span class="logo-text">Web</span>Studio</a
           >
-          <ul class="header-list list">
-            <li class="header-iten">
-              <a href="./" class="header-link">Студія</a>
+        </div>
+        <nav>
+          <ul class="header-list list box">
+            <li class="header-item">
+              <a href="./index.html" class="header-link link">Студія</a>
             </li>
-            <li class="header-iten">
-              <a href="./index.html" class="header-link port">Портфоліо</a>
+            <li class="header-item">
+              <a
+                href="/"
+                target="_self"
+                rel="norefferer noopener nofollow"
+                class="header-link link current"
+                >Портфоліо</a
+              >
             </li>
-            <li class="header-iten">
-              <a href="" class="header-link">Контакти</a>
+            <li class="header-item">
+              <a href="" class="header-link link">Контакти</a>
             </li>
           </ul>
         </nav>
-        <ul class="header-list list">
-          <div class="header-connect">
-            <li>
-              <a class="header-mail" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li>
-              <a class="header-tel" href="tel:+380961111111">+380961111111</a>
-            </li>
-          </div>
+
+        <!-- header contacts -->
+
+        <ul class="contacts-list list box">
+          <li class="contacts-item">
+            <a href="mailto:info@devstudio.com" class="header-contacts link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="contacts-item">
+            <a href="tel:+380961111111" class="header-contacts link"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
       </div>
     </header>
+    <!-- main -->
     <main>
-      <!--filters-->
-      <section class="filtres">
-        <div class="container">
-          <h1 class="visually-hidden">кнопки</h1>
-          <ul class="filtres-button list">
-            <li><button type="button" class="filtres-btn">Все</button></li>
-            <li>
-              <button type="button" class="filtres-btn">Веб-сайти</button>
+      <!-- Examples -->
+      <section class="works section">
+        <!-- Заголовок має бути прихований -->
+        <div class="conteiner addmb">
+          <h1 class="works-title visually-hidden">Зразки наших робіт</h1>
+          <ul class="works-buttons list">
+            <li class="works-btn-item">
+              <button type="button" class="works-btn">Всі</button>
             </li>
-            <li><button type="button" class="filtres-btn">Додатки</button></li>
-            <li><button type="button" class="filtres-btn">Дизайн</button></li>
-            <li>
-              <button type="button" class="filtres-btn">Маркетинг</button>
+            <li class="works-btn-item">
+              <button type="button" class="works-btn">Веб-сайти</button>
+            </li>
+            <li class="works-btn-item">
+              <button type="button" class="works-btn">Додатки</button>
+            </li>
+            <li class="works-btn-item">
+              <button type="button" class="works-btn">Дизайн</button>
+            </li>
+            <li class="works-btn-item">
+              <button type="button" class="works-btn">Маркетинг</button>
             </li>
           </ul>
-          <ul class="section-portfolio list">
-            <li class="portfolio-item">
-              <a href="./" class="link">
+        </div>
+        <div class="conteiner">
+          <ul class="works-list list">
+            <li class="works-item">
+              <a class="works-item-link link" href="">
                 <img
                   src="./images/port1.jpg"
-                  alt="Технокряк"
+                  alt="displaying the site on laptop"
                   width="370"
                   height="294"
                 />
-                <h2 class="portfolio-title">Технокряк</h2>
-                <p class="portfolio-text-title">Веб-сайт</p>
+                <h2 class="works-subtitle">Технокач</h2>
+                <p class="works-text">Веб-сайт</p>
               </a>
             </li>
-            <li class="portfolio-item">
-              <a href="./" class="link">
+            <li class="works-item">
+              <a class="works-item-link link" href="">
                 <img
                   src="./images/port2.jpg"
-                  alt="Дизайн"
+                  alt="basketball players"
                   width="370"
                   height="294"
                 />
-                <h2 class="portfolio-title">
-                  Постер New Orlean vs Golden Star
-                </h2>
-                <p class="portfolio-text-title">Дизайн</p>
+                <h2 class="works-subtitle">Постер New Orlean vs Golden Star</h2>
+                <p class="works-text">Дизайн</p>
               </a>
             </li>
-            <li class="portfolio-item">
-              <a href="./" class="link">
+            <li class="works-item">
+              <a class="works-item-link link" href="">
                 <img
                   src="./images/port3.jpg"
-                  alt="Ресторан Seafood"
+                  alt="restaurant logo"
                   width="370"
                   height="294"
                 />
-                <h2 class="portfolio-title">Ресторан Seafood</h2>
-                <p class="portfolio-text-title">Додаток</p>
+                <h2 class="works-subtitle">Ресторан Seafood</h2>
+                <p class="works-text">Додаток</p>
               </a>
             </li>
-            <li class="portfolio-item">
-              <a href="./" class="link">
+            <li class="works-item">
+              <a class="works-item-link link" href="">
                 <img
                   src="./images/port4.jpg"
-                  alt="Проект Prime"
+                  alt="headearphones"
                   width="370"
                   height="294"
                 />
-                <h2 class="portfolio-title">Проект Prime</h2>
-                <p class="portfolio-text-title">Маркетинг</p>
+                <h2 class="works-subtitle">Проєкт Prime</h2>
+                <p class="works-text">Маркетинг</p>
               </a>
             </li>
-            <li class="portfolio-item">
-              <a href="./" class="link">
+            <li class="works-item">
+              <a class="works-item-link link" href="">
                 <img
                   src="./images/port5.jpg"
-                  alt="Проект Boxes"
+                  alt="boxes"
                   width="370"
                   height="294"
                 />
-                <h2 class="portfolio-title">Проект Boxes</h2>
-                <p class="portfolio-text-title">Додаток</p>
+                <h2 class="works-subtitle">Проєкт Boxes</h2>
+                <p class="works-text">Додаток</p>
               </a>
             </li>
-            <li class="portfolio-item">
-              <a href="./" class="link">
-                <img
+            <li class="works-item">
+              <a class="works-item-link link" href=""
+                ><img
                   src="./images/port6.jpg"
-                  alt="Inspiration has no Borders"
+                  alt="displaying the site on monitor"
                   width="370"
                   height="294"
                 />
-                <h2 class="portfolio-title">Inspiration has no Borders</h2>
-                <p class="portfolio-text-title">Веб-сайт</p>
-              </a>
+                <h2 class="works-subtitle">Inspiration has no Borders</h2>
+                <p class="works-text">Веб-сайт</p></a
+              >
             </li>
-            <li class="portfolio-item">
-              <a href="./" class="link">
+            <li class="works-item">
+              <a class="works-item-link link" href="">
                 <img
                   src="./images/port7.jpg"
-                  alt="Издание Limited Edition"
+                  alt="open book"
                   width="370"
                   height="294"
                 />
-                <h2 class="portfolio-title">Видання Limited Edition</h2>
-                <p class="portfolio-text-title">Дизайн</p>
+                <h2 class="works-subtitle">Видання Limited Edition</h2>
+                <p class="works-text">Дизайн</p>
               </a>
             </li>
-            <li class="portfolio-item">
-              <a href="./" class="link">
+            <li class="works-item">
+              <a class="works-item-link link" href="">
                 <img
                   src="./images/port8.jpg"
-                  alt="Проект LAB"
+                  alt="bage with name of company"
                   width="370"
                   height="294"
                 />
-                <h2 class="portfolio-title">Проект LAB</h2>
-                <p class="portfolio-text-title">Маркетинг</p>
+                <h2 class="works-subtitle">Проєкт LAB</h2>
+                <p class="works-text">Маркетинг</p>
               </a>
             </li>
-            <li class="portfolio-item">
-              <a href="./" class="link">
+            <li class="works-item">
+              <a class="works-item-link link" href="">
                 <img
                   src="./images/port9.jpg"
-                  alt="Growing Business"
+                  alt="man typing on laptop"
                   width="370"
                   height="294"
                 />
-                <h2 class="portfolio-title">Growing Business</h2>
-                <p class="portfolio-text-title">Додаток</p>
+                <h2 class="works-subtitle">Growing Business</h2>
+                <p class="works-text">Додаток</p>
               </a>
             </li>
           </ul>
         </div>
       </section>
     </main>
-    <footer class="header-futer">
-      <a href="/" class="header-logo-footer"
-        ><span class="logo-web">Web</span>Studio</a
-      >
-
-      <address>
-        <a href="" class="address-location">г.Киев Бульвар Леси Украинки,д26</a>
-        <ul class="footer-list list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="header-footermail"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+380961111111" class="header-footertel"
-              >+380961111111</a
-            >
-          </li>
-        </ul>
-      </address>
+    <!-- footer -->
+    <footer class="basement">
+      <div class="basement-conteiner">
+        <a href="/" class="basement-logo link"
+          ><span class="logo-text">Web</span>Studio</a
+        >
+        <address class="basement-address">
+          <p class="basement-text">м. Київ, пр-т Лесі Українки, 26</p>
+          <ul class="basement-list list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="basement-contacts link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+380961111111" class="basement-contacts link"
+                >+38 096 111 11 11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
